// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nav Content should render with isShowNavContent disable 1`] = `
<NavContent
  isShowNavContent={false}
>
  <NavContent__NavContainer
    isShowNavContent={false}
  >
    <div
      className="NavContent__NavContainer-sc-1bgb07m-0 eHTNdM"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-sc-14bpgy4-0 cmmyDP"
          fluid={false}
        >
          <div
            className="MobileContainer-sc-14bpgy4-0 cmmyDP container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  md={2}
                >
                  <div
                    className="col-md-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-1822jsu-0 bmvzrf"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-1822jsu-1 dQmdA-D"
                            >
                              JD
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <Col
                  fluid="true"
                >
                  <div
                    className="col"
                    fluid="true"
                  >
                    <NavContent__NavMenu>
                      <nav
                        className="NavContent__NavMenu-sc-1bgb07m-1 kgJvPe"
                      >
                        <ul>
                          <NavContent__NavLi
                            key="Home"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={true}
                                page="Home"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__SelectedContainer>
                                  <a
                                    className="NavItem__Container-a312fv-0 NavItem__SelectedContainer-a312fv-1 fhutBo"
                                  >
                                    <Translate
                                      id="Home"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Home"
                                      >
                                        Missing translationId: Home for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__SelectedContainer>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="About"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="About"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#About"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#About"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="About"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="About"
                                      >
                                        Missing translationId: About for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Experiences"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Experiences"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Experiences"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Experiences"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Experiences"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Experiences"
                                      >
                                        Missing translationId: Experiences for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Projects"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Projects"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Projects"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Projects"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Projects"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Projects"
                                      >
                                        Missing translationId: Projects for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Certifications"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Certifications"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Certifications"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Certifications"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Certifications"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Certifications"
                                      >
                                        Missing translationId: Certifications for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Contacts"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Contacts"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Contacts"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Contacts"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Contacts"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Contacts"
                                      >
                                        Missing translationId: Contacts for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                        </ul>
                      </nav>
                    </NavContent__NavMenu>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render with isShowNavContent enable 1`] = `
<NavContent
  isShowNavContent={true}
>
  <NavContent__NavContainer
    isShowNavContent={true}
  >
    <div
      className="NavContent__NavContainer-sc-1bgb07m-0 bnWvqA"
    >
      <MobileContainer>
        <Container
          className="MobileContainer-sc-14bpgy4-0 cmmyDP"
          fluid={false}
        >
          <div
            className="MobileContainer-sc-14bpgy4-0 cmmyDP container"
          >
            <ForwardRef
              noGutters={false}
            >
              <div
                className="row"
              >
                <Col
                  md={2}
                >
                  <div
                    className="col-md-2"
                  >
                    <NavLogo>
                      <NavLogo__Logo
                        href="https://github.com/DeKal/portfolio-next-js"
                      >
                        <a
                          className="NavLogo__Logo-sc-1822jsu-0 bmvzrf"
                          href="https://github.com/DeKal/portfolio-next-js"
                        >
                          <NavLogo__LogoText>
                            <span
                              className="NavLogo__LogoText-sc-1822jsu-1 dQmdA-D"
                            >
                              JD
                            </span>
                          </NavLogo__LogoText>
                        </a>
                      </NavLogo__Logo>
                    </NavLogo>
                  </div>
                </Col>
                <Col
                  fluid="true"
                >
                  <div
                    className="col"
                    fluid="true"
                  >
                    <NavContent__NavMenu>
                      <nav
                        className="NavContent__NavMenu-sc-1bgb07m-1 kgJvPe"
                      >
                        <ul>
                          <NavContent__NavLi
                            key="Home"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={true}
                                page="Home"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__SelectedContainer>
                                  <a
                                    className="NavItem__Container-a312fv-0 NavItem__SelectedContainer-a312fv-1 fhutBo"
                                  >
                                    <Translate
                                      id="Home"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Home"
                                      >
                                        Missing translationId: Home for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__SelectedContainer>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="About"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="About"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#About"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#About"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="About"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="About"
                                      >
                                        Missing translationId: About for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Experiences"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Experiences"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Experiences"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Experiences"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Experiences"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Experiences"
                                      >
                                        Missing translationId: Experiences for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Projects"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Projects"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Projects"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Projects"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Projects"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Projects"
                                      >
                                        Missing translationId: Projects for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Certifications"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Certifications"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Certifications"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Certifications"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Certifications"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Certifications"
                                      >
                                        Missing translationId: Certifications for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                          <NavContent__NavLi
                            key="Contacts"
                          >
                            <li
                              className="NavContent__NavLi-sc-1bgb07m-2 gnuOKH"
                            >
                              <NavItem
                                isSelected={false}
                                page="Contacts"
                                setSelectedPage={[Function]}
                              >
                                <NavItem__Container
                                  data-test-id="nav-link"
                                  href="#Contacts"
                                  onClick={[Function]}
                                >
                                  <a
                                    className="NavItem__Container-a312fv-0 dSWZyj"
                                    data-test-id="nav-link"
                                    href="#Contacts"
                                    onClick={[Function]}
                                  >
                                    <Translate
                                      id="Contacts"
                                    >
                                      <WrappedTranslate
                                        context={
                                          Object {
                                            "activeLanguage": undefined,
                                            "addTranslation": [Function],
                                            "addTranslationForLanguage": [Function],
                                            "defaultLanguage": undefined,
                                            "ignoreTranslateChildren": false,
                                            "initialize": [Function],
                                            "languages": Array [],
                                            "renderToStaticMarkup": false,
                                            "setActiveLanguage": [Function],
                                            "translate": [Function],
                                          }
                                        }
                                        id="Contacts"
                                      >
                                        Missing translationId: Contacts for language: \${ languageCode }
                                      </WrappedTranslate>
                                    </Translate>
                                  </a>
                                </NavItem__Container>
                              </NavItem>
                            </li>
                          </NavContent__NavLi>
                        </ul>
                      </nav>
                    </NavContent__NavMenu>
                  </div>
                </Col>
              </div>
            </ForwardRef>
          </div>
        </Container>
      </MobileContainer>
    </div>
  </NavContent__NavContainer>
</NavContent>
`;

exports[`Nav Content should render without throwing an error 1`] = `
<NavContent__NavContainer>
  <MobileContainer>
    <ForwardRef
      noGutters={false}
    >
      <Col
        md={2}
      >
        <NavLogo />
      </Col>
      <Col
        fluid="true"
      >
        <NavContent__NavMenu>
          <ul>
            <NavContent__NavLi
              key="Home"
            >
              <NavItem
                isSelected={true}
                page="Home"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="About"
            >
              <NavItem
                isSelected={false}
                page="About"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Experiences"
            >
              <NavItem
                isSelected={false}
                page="Experiences"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Projects"
            >
              <NavItem
                isSelected={false}
                page="Projects"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Certifications"
            >
              <NavItem
                isSelected={false}
                page="Certifications"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
            <NavContent__NavLi
              key="Contacts"
            >
              <NavItem
                isSelected={false}
                page="Contacts"
                setSelectedPage={[Function]}
              />
            </NavContent__NavLi>
          </ul>
        </NavContent__NavMenu>
      </Col>
    </ForwardRef>
  </MobileContainer>
</NavContent__NavContainer>
`;
